// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Blog post viewer: Snapshot > render no blog posts 1`] = `
<body>
  <div>
    <div
      class="w-full self-center"
    >
      Nothing to see here
    </div>
  </div>
</body>
`;

exports[`Blog post viewer: Snapshot > render with blog posts 1`] = `
<body>
  <div>
    <div
      class="w-full self-center"
    >
      <div
        class="mb-6"
      >
        <div
          class="relative"
        >
          <div
            class="card w-full rounded-md shadow-md border hover:cursor-pointer hover:border-highlight-green transition-all"
          >
            <div
              class="card-body"
            >
              <div
                class="mb-3 flex w-full justify-between"
              >
                <div
                  class="flex"
                >
                  <div
                    class="avatar self-center hover:scale-110 transition-all"
                  >
                     
                    <a
                      href="/profile/user-1"
                    >
                      <img
                        alt="avatar"
                        class="inline-block aspect-square rounded-[50%] "
                        src="imageUrl"
                        style="width: 2.5rem;"
                      />
                    </a>
                  </div>
                  <div
                    class="ml-3"
                  >
                    <a
                      href="/profile/user-1"
                    >
                      <p
                        class="text-lg font-bold hover:underline"
                      >
                        test user
                      </p>
                    </a>
                    <p
                      class="text-sm text-gray-400"
                    >
                      X seconds ago
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="mb-3 w-fit text-2xl font-bold"
              >
                title
              </div>
              <div
                class="prose relative"
              >
                <p>
                  content
                </p>
                <div />
              </div>
              <div
                class="self-end"
              >
                <p
                  class="text-highlight-green no-underline"
                >
                  1
                   Comments
                </p>
              </div>
            </div>
          </div>
          <div
            class="absolute right-10 top-12"
          />
        </div>
      </div>
      <div
        class="mb-6"
      >
        <div
          class="relative"
        >
          <div
            class="card w-full rounded-md shadow-md border hover:cursor-pointer hover:border-highlight-green transition-all"
          >
            <div
              class="card-body"
            >
              <div
                class="mb-3 flex w-full justify-between"
              >
                <div
                  class="flex"
                >
                  <div
                    class="avatar self-center hover:scale-110 transition-all"
                  >
                     
                    <a
                      href="/profile/user-3"
                    >
                      <img
                        alt="avatar"
                        class="inline-block aspect-square rounded-[50%] "
                        src="anotherImageUrl"
                        style="width: 2.5rem;"
                      />
                    </a>
                  </div>
                  <div
                    class="ml-3"
                  >
                    <a
                      href="/profile/user-3"
                    >
                      <p
                        class="text-lg font-bold hover:underline"
                      >
                        another test user
                      </p>
                    </a>
                    <p
                      class="text-sm text-gray-400"
                    >
                      X seconds ago
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="mb-3 w-fit text-2xl font-bold"
              >
                another title
              </div>
              <div
                class="prose relative"
              >
                <p>
                  another content
                </p>
                <div />
              </div>
              <div
                class="self-end"
              >
                <p
                  class="text-highlight-green no-underline"
                >
                  1
                   Comments
                </p>
              </div>
            </div>
          </div>
          <div
            class="absolute right-10 top-12"
          />
        </div>
      </div>
      <div
        class="mb-6"
      >
        <div
          class="relative"
        >
          <div
            class="card w-full rounded-md shadow-md border hover:cursor-pointer hover:border-highlight-green transition-all"
          >
            <div
              class="card-body"
            >
              <div
                class="mb-3 flex w-full justify-between"
              >
                <div
                  class="flex"
                >
                  <div
                    class="avatar self-center hover:scale-110 transition-all"
                  >
                     
                    <a
                      href="/profile/user-5"
                    >
                      <img
                        alt="avatar"
                        class="inline-block aspect-square rounded-[50%] "
                        src="differentImageUrl"
                        style="width: 2.5rem;"
                      />
                    </a>
                  </div>
                  <div
                    class="ml-3"
                  >
                    <a
                      href="/profile/user-5"
                    >
                      <p
                        class="text-lg font-bold hover:underline"
                      >
                        different test user
                      </p>
                    </a>
                    <p
                      class="text-sm text-gray-400"
                    >
                      X seconds ago
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="mb-3 w-fit text-2xl font-bold"
              >
                different title
              </div>
              <div
                class="prose relative"
              >
                <p>
                  different content
                </p>
                <div />
              </div>
              <div
                class="self-end"
              >
                <p
                  class="text-highlight-green no-underline"
                >
                  1
                   Comments
                </p>
              </div>
            </div>
          </div>
          <div
            class="absolute right-10 top-12"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Comment Modal: Snapshots > render comment modal logged in with selected post 1`] = `
<body>
  <div />
</body>
`;

exports[`Comment Modal: Snapshots > render comment modal not logged in no selected post 1`] = `
<body>
  <div />
</body>
`;

exports[`Comment Modal: Snapshots > render comment modal not logged in with selected post 1`] = `
<body>
  <div />
</body>
`;

exports[`Profile tabbed view: Snapshot > should render profile tabbed view in blog post mode 1`] = `
<body>
  <div>
    <div
      class="mt-4 flex min-h-screen w-full flex-col content-center items-center md:px-0"
    >
      <div
        class="p-8 mt-24"
      >
        <div
          class="relative"
        >
          <div
            class="w-36 h-36 mx-auto rounded-full shadow-md absolute inset-x-0 top-0 -mt-24 flex items-center justify-center"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] "
              src="image"
              style="width: 40rem;"
            />
          </div>
        </div>
        <div
          class="mt-20 text-center pb-8"
        >
          <h1
            class="text-4xl font-bold"
          >
            test user
          </h1>
          <p
            class="mt-3 text-gray-400"
          >
            joined 
            <span
              class="text-grey-400"
            >
              1 second ago
            </span>
          </p>
        </div>
        <div
          class="wx-1/2"
        >
          <div
            class="grid grid-cols-2 gap-48 text-center grid-padding-64"
          >
            <div>
              <p
                class="font-bold text-gray-700 text-xl"
              >
                5
              </p>
              <p
                class="text-gray-400"
              >
                Blog Posts
              </p>
            </div>
            <div>
              <p
                class="font-bold text-gray-700 text-xl"
              >
                5
              </p>
              <p
                class="text-gray-400"
              >
                Comments
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="md:w-1/3 md:min-w-[40rem] w-11/12 relative"
        data-rttabs="true"
      >
        <ul
          class="mb-3 flex flex-row justify-start"
          role="tablist"
        >
          <li
            aria-controls="panel:r0:0"
            aria-disabled="false"
            aria-selected="true"
            class="w-1/2 md:w-32 cursor-pointer border-b-4 border-solid border-gray-200 p-4 text-center transition-all hover:border-b-highlight-green hover:font-bold border-b-4 border-solid border-b-highlight-green font-bold"
            data-rttab="true"
            data-testid="tab-post-viewer"
            id="tab:r0:0"
            role="tab"
            tabindex="0"
          >
            Blog Posts
          </li>
          <li
            aria-controls="panel:r0:1"
            aria-disabled="false"
            aria-selected="false"
            class="w-1/2 md:w-32 cursor-pointer border-b-4 border-solid border-gray-200 p-4 text-center transition-all hover:border-b-highlight-green hover:font-bold"
            data-rttab="true"
            data-testid="tab-comment-viewer"
            id="tab:r0:1"
            role="tab"
          >
            Comments
          </li>
        </ul>
        <div
          aria-labelledby="tab:r0:0"
          class="react-tabs__tab-panel react-tabs__tab-panel--selected"
          id="panel:r0:0"
          role="tabpanel"
        >
          <div
            class="w-full self-center"
          >
            <div
              class="mb-6"
            >
              <div
                class="relative"
              >
                <div
                  class="card w-full rounded-md shadow-md border hover:cursor-pointer hover:border-highlight-green transition-all"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="mb-3 flex w-full justify-between"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="avatar self-center hover:scale-110 transition-all"
                        >
                           
                          <a
                            href="/profile/user-1"
                          >
                            <img
                              alt="avatar"
                              class="inline-block aspect-square rounded-[50%] "
                              src="imageUrl"
                              style="width: 2.5rem;"
                            />
                          </a>
                        </div>
                        <div
                          class="ml-3"
                        >
                          <a
                            href="/profile/user-1"
                          >
                            <p
                              class="text-lg font-bold hover:underline"
                            >
                              test user
                            </p>
                          </a>
                          <p
                            class="text-sm text-gray-400"
                          >
                            1 second ago
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mb-3 w-fit text-2xl font-bold"
                    >
                      title
                    </div>
                    <div
                      class="prose relative"
                    >
                      <p>
                        content
                      </p>
                      <div />
                    </div>
                    <div
                      class="self-end"
                    >
                      <p
                        class="text-highlight-green no-underline"
                      >
                        1
                         Comments
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="absolute right-10 top-12"
                />
              </div>
            </div>
            <div
              class="mb-6"
            >
              <div
                class="relative"
              >
                <div
                  class="card w-full rounded-md shadow-md border hover:cursor-pointer hover:border-highlight-green transition-all"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="mb-3 flex w-full justify-between"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="avatar self-center hover:scale-110 transition-all"
                        >
                           
                          <a
                            href="/profile/user-3"
                          >
                            <img
                              alt="avatar"
                              class="inline-block aspect-square rounded-[50%] "
                              src="anotherImageUrl"
                              style="width: 2.5rem;"
                            />
                          </a>
                        </div>
                        <div
                          class="ml-3"
                        >
                          <a
                            href="/profile/user-3"
                          >
                            <p
                              class="text-lg font-bold hover:underline"
                            >
                              another test user
                            </p>
                          </a>
                          <p
                            class="text-sm text-gray-400"
                          >
                            1 second ago
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mb-3 w-fit text-2xl font-bold"
                    >
                      another title
                    </div>
                    <div
                      class="prose relative"
                    >
                      <p>
                        another content
                      </p>
                      <div />
                    </div>
                    <div
                      class="self-end"
                    >
                      <p
                        class="text-highlight-green no-underline"
                      >
                        1
                         Comments
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="absolute right-10 top-12"
                />
              </div>
            </div>
            <div
              class="mb-6"
            >
              <div
                class="relative"
              >
                <div
                  class="card w-full rounded-md shadow-md border hover:cursor-pointer hover:border-highlight-green transition-all"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="mb-3 flex w-full justify-between"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="avatar self-center hover:scale-110 transition-all"
                        >
                           
                          <a
                            href="/profile/user-5"
                          >
                            <img
                              alt="avatar"
                              class="inline-block aspect-square rounded-[50%] "
                              src="differentImageUrl"
                              style="width: 2.5rem;"
                            />
                          </a>
                        </div>
                        <div
                          class="ml-3"
                        >
                          <a
                            href="/profile/user-5"
                          >
                            <p
                              class="text-lg font-bold hover:underline"
                            >
                              different test user
                            </p>
                          </a>
                          <p
                            class="text-sm text-gray-400"
                          >
                            1 second ago
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mb-3 w-fit text-2xl font-bold"
                    >
                      different title
                    </div>
                    <div
                      class="prose relative"
                    >
                      <p>
                        different content
                      </p>
                      <div />
                    </div>
                    <div
                      class="self-end"
                    >
                      <p
                        class="text-highlight-green no-underline"
                      >
                        1
                         Comments
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="absolute right-10 top-12"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="tab:r0:1"
          class="react-tabs__tab-panel"
          id="panel:r0:1"
          role="tabpanel"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile tabbed view: Snapshot > should render profile tabbed view in comment mode 1`] = `
<body>
  <div>
    <div
      class="mt-4 flex min-h-screen w-full flex-col content-center items-center md:px-0"
    >
      <div
        class="p-8 mt-24"
      >
        <div
          class="relative"
        >
          <div
            class="w-36 h-36 mx-auto rounded-full shadow-md absolute inset-x-0 top-0 -mt-24 flex items-center justify-center"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] "
              src="image"
              style="width: 40rem;"
            />
          </div>
        </div>
        <div
          class="mt-20 text-center pb-8"
        >
          <h1
            class="text-4xl font-bold"
          >
            test user
          </h1>
          <p
            class="mt-3 text-gray-400"
          >
            joined 
            <span
              class="text-grey-400"
            >
              1 second ago
            </span>
          </p>
        </div>
        <div
          class="wx-1/2"
        >
          <div
            class="grid grid-cols-2 gap-48 text-center grid-padding-64"
          >
            <div>
              <p
                class="font-bold text-gray-700 text-xl"
              >
                5
              </p>
              <p
                class="text-gray-400"
              >
                Blog Posts
              </p>
            </div>
            <div>
              <p
                class="font-bold text-gray-700 text-xl"
              >
                5
              </p>
              <p
                class="text-gray-400"
              >
                Comments
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="md:w-1/3 md:min-w-[40rem] w-11/12 relative"
        data-rttabs="true"
      >
        <ul
          class="mb-3 flex flex-row justify-start"
          role="tablist"
        >
          <li
            aria-controls="panel:r1:0"
            aria-disabled="false"
            aria-selected="false"
            class="w-1/2 md:w-32 cursor-pointer border-b-4 border-solid border-gray-200 p-4 text-center transition-all hover:border-b-highlight-green hover:font-bold"
            data-rttab="true"
            data-testid="tab-post-viewer"
            id="tab:r1:0"
            role="tab"
          >
            Blog Posts
          </li>
          <li
            aria-controls="panel:r1:1"
            aria-disabled="false"
            aria-selected="true"
            class="w-1/2 md:w-32 cursor-pointer border-b-4 border-solid border-gray-200 p-4 text-center transition-all hover:border-b-highlight-green hover:font-bold border-b-4 border-solid border-b-highlight-green font-bold"
            data-rttab="true"
            data-testid="tab-comment-viewer"
            id="tab:r1:1"
            role="tab"
            tabindex="0"
          >
            Comments
          </li>
        </ul>
        <div
          aria-labelledby="tab:r1:0"
          class="react-tabs__tab-panel"
          id="panel:r1:0"
          role="tabpanel"
        />
        <div
          aria-labelledby="tab:r1:1"
          class="react-tabs__tab-panel react-tabs__tab-panel--selected"
          id="panel:r1:1"
          role="tabpanel"
        >
          <div
            data-testid="comment-viewer"
          >
            <div
              class="w-full mb-6 p-6 border rounded-md shadow-md"
            >
              <div
                class="mb-2 flex border-b"
              >
                <div
                  class="mb-2"
                >
                  Commented on
                </div>
                <div
                  class="mb-2 ml-1 font-bold cursor-pointer"
                >
                  test blog post
                </div>
              </div>
              <div
                class="relative m-3 rounded-md border-b p-4"
              >
                <div
                  class="flex"
                >
                  <div
                    class="avatar self-center transition-all hover:scale-110"
                  >
                     
                    <a
                      href="/"
                    >
                      <img
                        alt="avatar"
                        class="inline-block aspect-square rounded-[50%] "
                        src="image"
                        style="width: 2.5rem;"
                      />
                    </a>
                  </div>
                  <div
                    class="ml-3"
                  >
                    <a
                      href="/"
                    >
                      <p
                        class="text-lg font-bold hover:underline"
                      >
                        test user 2
                      </p>
                    </a>
                    <p
                      class="text-gray-400 text-sm"
                    >
                      1 second ago
                    </p>
                  </div>
                </div>
                <div
                  class="break-words"
                >
                  <p
                    class="mt-4 w-full"
                  >
                    test comment
                  </p>
                </div>
              </div>
            </div>
            <div
              class="w-full mb-6 p-6 border rounded-md shadow-md"
            >
              <div
                class="mb-2 flex border-b"
              >
                <div
                  class="mb-2"
                >
                  Commented on
                </div>
                <div
                  class="mb-2 ml-1 font-bold cursor-pointer"
                >
                  test blog post
                </div>
              </div>
              <div
                class="relative m-3 rounded-md border-b p-4"
              >
                <div
                  class="flex"
                >
                  <div
                    class="avatar self-center transition-all hover:scale-110"
                  >
                     
                    <a
                      href="/"
                    >
                      <img
                        alt="avatar"
                        class="inline-block aspect-square rounded-[50%] "
                        src="image"
                        style="width: 2.5rem;"
                      />
                    </a>
                  </div>
                  <div
                    class="ml-3"
                  >
                    <a
                      href="/"
                    >
                      <p
                        class="text-lg font-bold hover:underline"
                      >
                        test user 3
                      </p>
                    </a>
                    <p
                      class="text-gray-400 text-sm"
                    >
                      1 second ago
                    </p>
                  </div>
                </div>
                <div
                  class="break-words"
                >
                  <p
                    class="mt-4 w-full"
                  >
                    test comment
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
